--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>MakePlace save file updater</title>
 </head>
 <body>
+    <p> This is a page to convert MakePlace save files from old version to the current one</p>
+    <p>1. Open the file you want to convert</p>
+    <P>2. Copy and paste the contents to the textbox</P>
+    <p>3. Click the update button to download the new file</p>
     <textarea id="json"></textarea>
     <button onclick="convert()">Update</button>
 </body>
