--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		obj.interiorFurniture = obj.furniture;
 		delete obj.furniture;
 		let data = JSON.stringify(obj, null, 2);
-		download("build.js", data);
+		download("build.json", data);
 	}
 
 
